<resources>
    <string name="app_name">Exam_project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lets Quit Smoking!</string>
    <string name="nav_header_subtitle">Letsquit@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_numbers">Calculate your savings</string>
    <string name="menu_health">Health</string>
    <string name="menu_cravings">Cravings</string>
    <string name="craving_title"> Which craving do you have? Click on one to get distracted!</string>
    <string name="health_title"> Below is some of the disadvantages of smoking. Click one to read more about it!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_fragment">DEMO fragment</string>
    <string name="quit_smoking">Quit Smoking!</string>
    <string name="homepageimg">Homepageimg</string>
    <string name="price_of_a_pack_of_cigareets">Price of a pack of cigareets?</string>
    <string name="how_many_do_you_smoke_a_day">How many do you smoke a day?</string>
    <string name="how_many_days_since_last_cigareets">How many days since last cigareets?</string>
    <string name="calculate">Calculate</string>
    <string name="how_much_have_you_saved">How Much have you Saved?</string>
    <string name="distance">Distance</string>
    <string name="my_goal">My Goal</string>
    <string name="how_much_is_your_goal">How much is Your Goal?</string>
    <string name="how_far_can_you_travel">How far can you travel?</string>
    <string name="insert_your_goal_in_crowns_here">Insert your goal in crowns here!</string>
    <string name="based_on_your_savings_you_could_drive">Based on your savings you could drive:</string>


</resources>