<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_numbers"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_numbers" />
        <item
            android:id="@+id/nav_health"
            android:icon="@android:drawable/stat_notify_more"
            android:title="@string/menu_health" />

        <item
            android:id="@id/nav_cravings"
            android:icon="?android:attr/alertDialogIcon"
            android:title="@string/menu_cravings" />

        <item
            android:id="@id/nav_distance"
            android:icon="@drawable/ic_baseline_drive"
            android:title="@string/distance" />

        <item
            android:id="@id/nav_goal"
            android:icon="@drawable/ic_baseline_money"
            android:title="@string/my_goal" />

    </group>

</menu>